--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.9.8",
-    "nodemailer": "^4.4.1"
+    "nodemailer": "^4.4.1",
+    "sendmail": "^1.2.0"
   }
 }
