Added current project and changed landing page image.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.9.8",
     "nodemailer": "^4.4.1",
+    "php-express": "0.0.3",
     "sendmail": "^1.2.0"
   }
 }
