--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.9.8",
+    "gasp": "0.0.2",
     "nodemailer": "^4.4.1",
     "php-express": "0.0.3",
     "sendmail": "^1.2.0"
